# GIAIC-Hackathon-Book-RAG-2025

./: .gitignore  CLAUDE.md  README.md  test_backend.py
.claude/: settings.local.json
.claude/agents/: chapter-creator.md
.claude/skills/content-creation/: content-creation-skill.md
.claude/skills/section-writer/: SKILL.md
.specify/memory/: constitution.md
history/: git-operations-history.md  implementation-history.md  rag-chatbot-data-fetching-issue.md  rag-chatbot-implementation-report.md  technical-implementation-report.md
physical-ai-and-humanoid-robotics/: docusaurus.config.ts  package-lock.json  sidebars.ts
physical-ai-and-humanoid-robotics/docs/: assessments.mdx  cloud-lab.mdx  course-details.mdx  hardware-requirements.mdx  module1.mdx  module2.mdx  module3.mdx  module4.mdx  robot-lab.mdx  student-kits.mdx  weekly-breakdown.mdx
physical-ai-and-humanoid-robotics/rag-chatbot/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  main.py  pyproject.toml  requirements.txt
physical-ai-and-humanoid-robotics/rag-chatbot/my_agent/: course_agent.py
physical-ai-and-humanoid-robotics/rag-chatbot/my_config/: gemini_config.py
physical-ai-and-humanoid-robotics/rag-chatbot/rag/: ingest.py  retrieve.py
physical-ai-and-humanoid-robotics/rag-chatbot/routers/: chat.py
specs/001-cohere-to-gemini-embed/: data-model.md  migration-flow.md  plan.md  research.md  spec.md  tasks.md
specs/ai-native-docusaurus-textbook-rag-chatbot/: plan.md  spec.md  tasks.md
specs/project-rag-working-chatbot/: checklist.md  plan.md  spec.md  tasks.md
(+77 files in other folders)
